--- a/readit/package.json
+++ b/readit/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
-    "express": "^4.16.1",
+    "cookie-session": "^2.0.0-beta.3",
+    "express": "^4.16.2",
     "jsonwebtoken": "^8.0.1",
     "material-ui": "^0.19.3",
     "mongoose": "^4.12.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
+    "passport-google-auth": "^1.0.2",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
@@ -29,10 +34,13 @@
     "validator": "^9.0.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "nodemon": "^1.12.1",
     "webpack": "^3.6.0"
   }
